fix: break to new line when the text is too long

--- a/src/app/chat-container/chat-messages/chat-messages.component.scss
+++ b/src/app/chat-container/chat-messages/chat-messages.component.scss
@@ -30,3 +30,7 @@
   color: colors.$chat-message-date-color;
   padding-top: 0.5rem;
 }
+
+.chat-message__text {
+  word-break: break-all;
+}
